# isomaze

./: .gitignore  Cargo.toml  DESCRIPTION.md  README.md
.github/workflows/: ci.yml  udeps.yml
isomaze_game/: Cargo.toml
isomaze_game/src/: main.rs
isomaze_lib/: Cargo.toml
isomaze_lib/src/geometry/: meshes.rs  voxels.rs
isomaze_lib/src/graphics/: mod.rs
isomaze_lib/src/graphics/geometry/: mod.rs
isomaze_lib/src/graphics/render/: mod.rs  render_2d.rs
isomaze_macros/: Cargo.toml
tools/ci/: Cargo.toml
tools/ci/src/: main.rs
